<?xml version="1.0" encoding="utf-8"?>
<layout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools">

	<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
														 android:layout_height="match_parent"
	android:layout_marginTop="?actionBarSize">


		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical">

			<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
															   android:layout_height="match_parent">

				<ImageView
						android:layout_width="120dp"
						android:layout_height="120dp" tools:src="@tools:sample/avatars" android:id="@+id/profil_image"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
						android:layout_marginTop="24dp" android:contentDescription="@string/profilimage"
						app:srcCompat="@drawable/ic_person_black_24dp"/>
				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:id="@+id/profile_name" android:layout_marginTop="16dp"
						app:layout_constraintTop_toBottomOf="@+id/profil_image" app:layout_constraintStart_toStartOf="parent"
						android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
						android:layout_marginEnd="8dp" android:text="@string/adryan_eka_vandra"/>
				<TextView
						android:text="@string/adryanekavandra_gmail_com"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:id="@+id/profile_email" android:layout_marginTop="8dp"
						app:layout_constraintTop_toBottomOf="@+id/profile_name"
						app:layout_constraintStart_toStartOf="@+id/profile_name"
						app:layout_constraintEnd_toEndOf="@+id/profile_name"/>
			</androidx.constraintlayout.widget.ConstraintLayout>



		</LinearLayout>



	</androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>