<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
			  >

	<com.google.android.material.textfield.TextInputLayout
			android:layout_width="wrap_content"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_marginStart="8dp"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginEnd="8dp"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:hint="@string/nama_lengkap"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:id="@+id/edit_nama_layout"
	>
		<com.google.android.material.textfield.TextInputEditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:inputType="textPersonName"
				android:ems="10"
				android:id="@+id/edit_nama_edit_text"
				android:layout_marginTop="8dp"
		/>
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
			android:layout_width="wrap_content"
			app:layout_constraintStart_toStartOf="@+id/edit_nama_layout"
			app:layout_constraintEnd_toEndOf="@+id/edit_nama_layout"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:hint="@string/nomor_hp"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:id="@+id/edit_nomor_hp_layout"
			app:layout_constraintTop_toBottomOf="@+id/edit_nama_layout">
		<com.google.android.material.textfield.TextInputEditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:inputType="phone"
				android:ems="10"
				android:id="@+id/edit_nomor_hp_edit_text"
				android:layout_marginTop="8dp"
		/>
	</com.google.android.material.textfield.TextInputLayout>
	<com.google.android.material.textfield.TextInputLayout
			android:layout_width="wrap_content"
			app:layout_constraintStart_toStartOf="@+id/edit_nomor_hp_layout"
			app:layout_constraintEnd_toEndOf="@+id/edit_nomor_hp_layout"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:hint="@string/email"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:id="@+id/edit_email_layout"
			app:layout_constraintTop_toBottomOf="@+id/edit_nomor_hp_layout"
			app:layout_constraintHorizontal_bias="0.375">
		<com.google.android.material.textfield.TextInputEditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:inputType="textEmailAddress"
				android:ems="10"
				android:id="@+id/edit_email_edit_text"
				android:layout_marginTop="8dp"
		/>
	</com.google.android.material.textfield.TextInputLayout>
	<com.google.android.material.textfield.TextInputLayout
			android:layout_width="wrap_content"
			app:layout_constraintStart_toStartOf="@+id/edit_email_layout"
			app:layout_constraintEnd_toEndOf="@+id/edit_email_layout"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:hint="@string/alamat"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:id="@+id/edit_alamat_layout"
			app:layout_constraintTop_toBottomOf="@+id/edit_email_layout"
			app:layout_constraintHorizontal_bias="0.0">
		<com.google.android.material.textfield.TextInputEditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:inputType="textPostalAddress"
				android:ems="10"
				android:id="@+id/edit_alamat_edit_text"
				android:layout_marginTop="8dp"
		/>
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.button.MaterialButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			style="@style/Widget.MaterialComponents.Button.OutlinedButton"
			android:text="@string/simpan"
			app:layout_constraintStart_toStartOf="@+id/edit_alamat_layout"
			app:layout_constraintEnd_toEndOf="@+id/edit_alamat_layout" android:layout_marginTop="24dp"
			app:layout_constraintTop_toBottomOf="@+id/edit_alamat_layout"
			app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="24dp"
			app:layout_constraintVertical_bias="0.01999998"/>
</androidx.constraintlayout.widget.ConstraintLayout>