<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
             tools:context=".ui.detail.ContactDetailFragment"
        >

  <data>
      <variable name="vm" type="com.adryanev.dicoding.mycontacts.viewmodels.ContactDetailViewModel"/>
  </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
                                                         android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="match_parent"
                                                           android:layout_marginTop="?actionBarSize">

            <com.hbb20.GThumb android:layout_width="120dp" android:layout_height="120dp"
                              android:id="@+id/contact_detail_avatar" app:layout_constraintTop_toTopOf="parent"
                              app:layout_constraintStart_toStartOf="parent"
                              app:layout_constraintEnd_toEndOf="parent"
                              app:imageFromName="@{vm.contact.nama}"
                              android:layout_marginTop="24dp"/>
            <TextView
                    android:text="@{vm.contact.nama}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/detail_nama"
                    app:layout_constraintTop_toBottomOf="@+id/contact_detail_avatar"
                    app:layout_constraintStart_toStartOf="@+id/contact_detail_avatar"
                    app:layout_constraintEnd_toEndOf="@+id/contact_detail_avatar" android:layout_marginTop="24dp"
                    android:textAppearance="@android:style/TextAppearance.Material.Display1"
                    tools:text="@tools:sample/full_names"/>
            <View
                    android:id="@+id/view"
                    style="@style/Divider"
                    app:layout_constraintTop_toBottomOf="@+id/detail_nama"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"/>

            <com.google.android.material.button.MaterialButton android:layout_width="wrap_content"
                                                               android:layout_height="wrap_content"
                                                               app:layout_constraintTop_toBottomOf="@+id/view"
                                                               app:layout_constraintStart_toStartOf="parent"
                                                               android:layout_marginStart="8dp"
                                                               android:id="@+id/detail_call_button"
                                                               app:layout_constraintHorizontal_bias="0.5"
                                                               app:layout_constraintEnd_toStartOf="@+id/detail_message_button"
                                                               app:icon="@drawable/ic_phone_white_24dp"
                                                               android:layout_marginTop="16dp"
                                                               style="@style/Widget.MaterialComponents.Button.OutlinedButton"

                                                               android:text="@string/telepon"/>
            <com.google.android.material.button.MaterialButton android:layout_width="wrap_content"
                                                               android:layout_height="wrap_content"
                                                               android:layout_marginStart="8dp"
                                                               app:layout_constraintTop_toTopOf="@+id/detail_call_button"
                                                               app:layout_constraintStart_toEndOf="@+id/detail_call_button"
                                                               app:layout_constraintEnd_toEndOf="parent"
                                                               android:layout_marginEnd="8dp"
                                                               android:id="@+id/detail_message_button"
                                                               app:layout_constraintHorizontal_bias="0.5"
                                                               app:icon="@drawable/ic_message_black_24dp"
                                                               style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                                                               android:text="@string/sms"/>
            <View
                    style="@style/Divider" android:id="@+id/view2"
                    app:layout_constraintTop_toBottomOf="@+id/detail_call_button"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="16dp"/>
            <TextView
                    android:text="@{vm.contact.nomorHp}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/detail_nomorHp"
                    android:drawableStart="@drawable/ic_phone_white_24dp"
                    android:drawableTint="@color/colorSecondary"
                    android:drawablePadding="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/view2" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="32dp" tools:text="@tools:sample/us_phones"
                    tools:targetApi="m" android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
            <TextView
                    android:text="@{vm.contact.email}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/detail_email"
                    app:layout_constraintTop_toBottomOf="@+id/detail_nomorHp"
                    app:layout_constraintStart_toStartOf="@+id/detail_nomorHp"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:drawablePadding="16dp"
                    android:drawableTint="@color/colorSecondary"
                    app:layout_constraintEnd_toEndOf="@+id/detail_nomorHp"
					android:layout_marginBottom="8dp"
                    app:layout_constraintVertical_bias="0.0"
                    android:layout_marginTop="16dp" tools:text="@string/adryanekavandra_gmail_com"
                    app:layout_constraintHorizontal_bias="0.0" tools:targetApi="m"/>
            <TextView
                    android:text="@{vm.contact.alamat}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/detail_alamat"
                    app:layout_constraintTop_toBottomOf="@+id/detail_email"
                    app:layout_constraintStart_toStartOf="@+id/detail_email"
                    android:drawableStart="@drawable/ic_location_city_black_24dp"
                    android:drawablePadding="16dp"
                    android:drawableTint="@color/colorSecondary"
                    app:layout_constraintEnd_toEndOf="@+id/detail_email" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
                    android:layout_marginTop="16dp" tools:text="@tools:sample/cities"
                    app:layout_constraintHorizontal_bias="0.0" tools:targetApi="m"/>
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/detail_nomor_sms_button" android:src="@drawable/ic_message_black_24dp"
                    app:layout_constraintStart_toEndOf="@+id/detail_nomorHp"
                    app:layout_constraintTop_toTopOf="@+id/detail_nomorHp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                    app:layout_constraintHorizontal_bias="1.0"
                    android:background="@android:drawable/screen_background_light_transparent"
                    android:tint="@color/colorSecondary" android:contentDescription="@string/sms"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:id="@+id/edit_button"
                app:icon="@drawable/ic_edit_black_24dp"
                android:text="@string/edit_kontak"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/fab_margin"
                app:backgroundTint="@color/colorSecondary"
                tools:ignore="PrivateResource"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>